[BE] 선수 점수 크롤링 로직 수정